# tdd-potter-kata

./: CMakeLists.txt  README.md  build.sh
inc/: potter.h
src/: main.cpp  potter.cpp  test.cpp
